# TrashProjects

./: .gitattributes  .gitignore  CMakeLists.txt  Edison.cmake  README.md  RUNNER.cmd
src/droid_side/: CMakeLists.txt  enviroment_scanner_client.ini  life_cycle.cc  life_cycle.h  log4cplus.properties  logger_config.ini  main.cc
src/droid_side/components/: CMakeLists.txt
src/droid_side/components/axelerometer_adapter/: CMakeLists.txt
src/droid_side/components/axelerometer_adapter/src/: .fuse_hidden000004ff00000002  axelerometer_adapter_impl.cc
src/droid_side/components/engine_adapter/: CMakeLists.txt
src/droid_side/components/engine_adapter/src/: engine_adapter_impl.cc
src/droid_side/components/include/axelerometer_adapter/: axelerometer_adapter.h
src/droid_side/components/include/engine_adapter/: engine_adapter.h
src/droid_side/components/include/mover/: move_message.h  mover.h
src/droid_side/components/include/scanner/: scanner.h  sensor_data_message.h
src/droid_side/components/include/sensor_adapter/: sensor_adapter.h
src/droid_side/components/include/server_message_handler/: message.h  server_message_handler.h
src/droid_side/components/include/servo_adapter/: servo_adapter.h
src/droid_side/components/mover/: CMakeLists.txt
src/droid_side/components/mover/src/: tank_track_mover.cc
src/droid_side/components/scanner/: CMakeLists.txt
src/droid_side/components/scanner/src/: scanner_impl.cc
src/droid_side/components/sensor_adapter/: CMakeLists.txt
src/droid_side/components/sensor_adapter/src/: lidar_lite_3_adapter.cc
src/droid_side/components/server_message_handler/: CMakeLists.txt
src/droid_side/components/server_message_handler/src/: server_message_handler_impl.cc
src/droid_side/components/servo_adapter/: CMakeLists.txt
src/droid_side/components/servo_adapter/src/: servo_adapter_impl.cc
src/droid_side/unit_tests/: CMakeLists.txt
src/droid_side/unit_tests/axelerometer_adapter/: CMakeLists.txt  axelerometer_adapter_impl_test.cc
src/droid_side/unit_tests/engine_adapter/: CMakeLists.txt  engine_adapter_impl_test.cc
src/droid_side/unit_tests/include/axelerometer_adapter/: mock_axelerometer_adapter.h
src/droid_side/unit_tests/include/engine_adapter/: mock_engine_adapter.h
src/droid_side/unit_tests/include/mover/: mock_mover.h
src/droid_side/unit_tests/include/scanner/: mock_scanner.h
src/droid_side/unit_tests/include/sensor_adapter/: mock_sensor_adapter.h
src/droid_side/unit_tests/include/server_message_handler/: mock_server_message_handler.h
src/droid_side/unit_tests/include/servo_adapter/: mock_servo_adapter.h
src/droid_side/unit_tests/mover/: CMakeLists.txt  mover_impl_test.cc
src/droid_side/unit_tests/scanner/: CMakeLists.txt  scanner_impl_test.cc
src/droid_side/unit_tests/sensor_adapter/: CMakeLists.txt  sensor_adapter_impl_test.cc
src/droid_side/unit_tests/server_message_handler/: CMakeLists.txt  server_message_handler_impl_test.cc
src/droid_side/unit_tests/servo_adapter/: CMakeLists.txt  servo_adapter_impl_test.cc
src/server_side/: CMakeLists.txt  enviroment_scanner_server.ini  life_cycle.cc  life_cycle.h  log4cplus.properties  main.cc
src/server_side/app_main/include/app_main/: life_cycle.h  message_listener.h
src/server_side/app_main/src/: life_cycle.cc  main.cc
src/server_side/components/: CMakeLists.txt
src/server_side/components/drone_message_handler/: CMakeLists.txt
src/server_side/components/drone_message_handler/src/: drone_message_handler_impl.cc
src/server_side/components/drone_mover/: CMakeLists.txt
src/server_side/components/drone_mover/src/: drone_mover_impl.cc
src/server_side/components/guide/: CMakeLists.txt
src/server_side/components/guide/src/: guide_impl.cc
src/server_side/components/include/drone_message_handler/: drone_message_handler.h
src/server_side/components/include/drone_mover/: drone_mover.h
src/server_side/components/include/guide/: guide.h
src/server_side/components/include/map_assembler/: map_assembler.h
src/server_side/components/include/map_detalization_analyzer/: map_detalization_analyzer.h
src/server_side/components/include/snapshot_processor/: snapshot_processor.h
src/server_side/components/map_assembler/: CMakeLists.txt
src/server_side/components/map_assembler/include/: map.h
src/server_side/components/map_assembler/src/: map_assembler_impl.cc
src/server_side/components/map_detalization_analyzer/: CMakeLists.txt
src/server_side/components/map_detalization_analyzer/src/: map_detalization_analyzer_impl.cc
src/server_side/components/snapshot_processor/: CMakeLists.txt
src/server_side/components/snapshot_processor/src/: snapshot.cc  snapshot_processor_impl.cc
src/server_side/unit_tests/: CMakeLists.txt
src/server_side/unit_tests/drone_message_handler/: CMakeLists.txt  drone_message_handler_impl_test.cc
src/server_side/unit_tests/drone_mover/: CMakeLists.txt  drone_mover_impl_test.cc
src/server_side/unit_tests/guide/: CMakeLists.txt  guide_impl_test.cc
src/server_side/unit_tests/include/drone_message_handler/: mock_drone_message_handler.h
src/server_side/unit_tests/include/drone_mover/: mock_drone_mover.h
src/server_side/unit_tests/map_assembler/: CMakeLists.txt  map_assembler_impl_test.cc
src/server_side/unit_tests/map_detalization_analyzer/: CMakeLists.txt  map_detalization_analyzer_impl_test.cc
src/server_side/unit_tests/snapshot_processor/: CMakeLists.txt  snapshot_processor_impl_test.cc
src/utils/: CMakeLists.txt
src/utils/include/utils/: arduino_mmap_worker_singletone.h  logger.h  macro.h  numbers.h  profile.h  profile_impl.h  socket.h  tcp_socket.h  vector.h
src/utils/include/utils/containers/: message_queue.h  (+1 more)
src/utils/src/: arduino_mmap_worker_singletone.cc  logger.cc  profile_impl.cc  string.cc  tcp_socket_posix.cc  thread.cc
src/utils/src/network/: tcp_socket_client_boost.cc  tcp_socket_posix.cc  tcp_socket_server_boost.cc
src/utils/src/structures/: matrix2.cc  matrix3.cc
src/utils/src/synchronization/: atomic.cc  auto_lock.cc  conditional_variable.cc  lock.cc
src/utils/src/threads/: thread.cc
(+199 files in other folders)
